--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>セッション2:　現場で使える！実践Git（うらがみさん）</td>
+                                    <td>セッション2:　現場で使える！実践Git　めざせ脱初心者！（うらがみさん）</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
